fixed overflow main-screen

--- a/source/sass/blocks/main-screen.scss
+++ b/source/sass/blocks/main-screen.scss
@@ -3,14 +3,15 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 650px;
+  height: auto;
+  min-height: 650px;
 
   @include vp-1023 {
-    height: 638px;
+    min-height: 638px;
   }
 
   @include vp-374 {
-    height: 500px;
+    min-height: 500px;
   }
 }
 
@@ -20,30 +21,31 @@
   left: 0;
   display: block;
   width: 100%;
-  height: 650px;
+  height: auto;
+  min-height: 650px;
   background-color: $color-royal-blue;
   text-indent: -100vw;
 
   @include vp-1023 {
-    height: 638px;
+    min-height: 638px;
   }
 
   @include vp-374 {
-    height: 500px;
+    min-height: 500px;
   }
 }
 
 .main-screen__bg img {
   width: 100%;
-  height: 650px;
+  min-height: 650px;
   object-fit: cover;
 
   @include vp-1023 {
-    height: 638px;
+    min-height: 638px;
   }
 
   @include vp-374 {
-    height: 500px;
+    min-height: 500px;
   }
 }
 
@@ -51,15 +53,21 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: flex-start;
   height: 100%;
+  padding-top: 270px;
   padding-left: 95px;
   font-family: "Montserrat", "Arial", sans-serif;
   color: $color-alice-blue;
 
   @include vp-1023 {
+    padding-top: 268px;
     padding-left: 0;
+  }
+
+  @include vp-767 {
+    padding-top: 176px;
   }
 }
 
@@ -67,7 +75,7 @@
   font-weight: 700;
   font-size: 54px;
   line-height: 66px;
-  margin: 0 0 15px 0;
+  margin: 0 0 12px 0;
   text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 
   @include vp-1023 {
